fixing bottom margin on about on mobile

--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -7,7 +7,7 @@
   width: 90%;
   max-width: 1200px;
   margin: 10vh auto;
-  margin-bottom: 0;
+  margin-bottom: 2.5rem;
 }
 
 .portrait-container {
